--- a/hello.html
+++ b/hello.html
@@ -3,6 +3,6 @@
 <title>Hello Git</title>
 </head>
 <body>
-<p>just a simple repo to explore git</p>
+<p>Just a simple repo to explore git</p>
 </body>
 </html>
